--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^2.21.3",
     "draft-js": "^0.11.7",
+    "emailjs-com": "^3.2.0",
     "firebase": "^8.2.3",
     "force": "0.0.3",
     "formik": "^2.2.7",
-    "google-maps-react": "^2.0.6",
     "gray-matter": "^4.0.3",
     "history": "^5.0.0",
     "i18next": "^19.8.7",
