--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ./src",
     "lint-fix": "eslint --fix ./src",
     "start": "react-scripts start",
+    "proxy": "node proxy.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
